--- a/app/src/main/res/layout/atualizar_fazenda.xml
+++ b/app/src/main/res/layout/atualizar_fazenda.xml
@@ -88,6 +88,24 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
             android:fontFamily="@font/roboto"
+            android:text="@string/trabalho_familiar_remunerado"
+            android:textColor="@color/colorPrimary" />
+
+        <EditText
+            android:id="@+id/custoTrabalhoFamiliarNaoRemuneradoFazendaEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:ems="10"
+            android:importantForAutofill="no"
+            android:inputType="numberDecimal"
+            tools:ignore="LabelFor" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:fontFamily="@font/roboto"
             android:text="@string/dividas_longo_prazo"
             android:textColor="@color/colorPrimary" />
 
