--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -47,6 +47,9 @@
             android:name="id"
             app:argType="string"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_balanco_patrimonial_frag_to_nav_fazenda"
+            app:destination="@id/nav_fazenda" />
     </fragment>
 
     <fragment
