--- a/app/src/main/res/layout/atualizar_fazenda.xml
+++ b/app/src/main/res/layout/atualizar_fazenda.xml
@@ -328,6 +328,24 @@
             tools:ignore="LabelFor" />
 
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:fontFamily="@font/roboto"
+            android:text="@string/rentabildiade_intro"
+            android:textColor="@color/colorPrimary" />
+
+        <EditText
+            android:id="@+id/rentabilidadeFazendaEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:ems="10"
+            android:importantForAutofill="no"
+            android:inputType="number|numberDecimal"
+            tools:ignore="LabelFor" />
+
+        <TextView
             style="@style/title_style"
             android:text="@string/comentarios_intro"
             android:textAlignment="center" />
