--- a/app/src/main/res/layout/fluxo_caixa_atividade.xml
+++ b/app/src/main/res/layout/fluxo_caixa_atividade.xml
@@ -53,16 +53,34 @@
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:fontFamily="@font/roboto"
-            android:text="@string/pendencias_intro"
-            android:textColor="@color/colorPrimary"
-            android:textSize="24sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-        <TextView
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/roboto"
+                    android:text="@string/pendencias_intro"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/createPendencia"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/right_button_blue_shape"
+                    android:text="Cadastrar"
+                    android:textColor="@android:color/white" />
+            </LinearLayout>
+
+            <TextView
             android:id="@+id/fcaixaPagarText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -87,11 +105,18 @@
                 android:id="@+id/fcaixaLucroText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
+
                 android:fontFamily="@font/roboto"
                 android:text="@string/lucro_fazenda"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerFluxoCaixaPendencias"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
 
             <TextView
                 android:layout_width="match_parent"
