--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -61,6 +61,9 @@
             android:name="id"
             app:argType="string"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_fluxo_caixa_to_pendenciasFragment"
+            app:destination="@id/pendenciasFragment" />
     </fragment>
     <fragment
         android:id="@+id/atualizarFazendaFrag"
@@ -120,5 +123,14 @@
             android:name="id"
             app:argType="string"
             app:nullable="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/pendenciasFragment"
+        android:name="com.example.agrogestao.PendenciasFragment"
+        android:label="fragment_pendencias"
+        tools:layout="@layout/fragment_pendencias" >
+        <action
+            android:id="@+id/action_pendenciasFragment_to_nav_fazenda"
+            app:destination="@id/nav_fazenda" />
     </fragment>
 </navigation>
