--- a/app/src/main/res/layout/item_list_balanco_patrimonial.xml
+++ b/app/src/main/res/layout/item_list_balanco_patrimonial.xml
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
+            android:padding="4dp"
             android:text="@{itemBalanco.nome}"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
@@ -30,6 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
+            android:padding="4dp"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
@@ -39,6 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
+            android:padding="4dp"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
