--- a/app/src/main/res/layout/apresentacao_balanco_patrimonial.xml
+++ b/app/src/main/res/layout/apresentacao_balanco_patrimonial.xml
@@ -88,7 +88,8 @@
                 android:fontFamily="@font/roboto"
                 android:text="@string/indicadores_economicos"
                 android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textSolvenciaBalanco"
